Runs and quits :) ; Doesn'e show Splash page :( .

--- a/src/desktop/If6Engine/If6Engine.qrc
+++ b/src/desktop/If6Engine/If6Engine.qrc
@@ -1,6 +1,9 @@
 <RCC>
-    <qresource prefix="/image/logo/png">
+    <qresource prefix="/image/logo/ico">
         <file>EclipseIRLogo.png</file>
         <file>INDI200.png</file>
+    </qresource>
+    <qresource prefix="/image/logo/ic">
+        <file>INDIonly64.ico</file>
     </qresource>
 </RCC>
